podinfo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: podinfo
  labels:
    run: podinfo
spec:
  type: LoadBalancer
  ports:
    - port: 9898
      protocol: TCP
  selector:
    app:  podinfo
