podinfo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  namespace: podinfo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  defaultBackend:
    service:
      name: podinfo
      port:
        number: 9898
